# GHOUL

./: .gitignore  .gitmodules  README.md
2024-Firmware/2024.0/flight/: CMakeLists.txt  flight.cpp
2024-Firmware/2024.0/servo-calibrate/: CMakeLists.txt  servo-calibrate.c
Board/: #auto_saved_files#  CloudCruiser_Board_README.md  GHOUL2-B_Cu.gbr  GHOUL2-B_Mask.gbr  GHOUL2-B_Paste.gbr  GHOUL2-B_Silkscreen.gbr  GHOUL2-Edge_Cuts.gbr  GHOUL2-F_Cu.gbr  GHOUL2-F_Mask.gbr  GHOUL2-F_Paste.gbr  GHOUL2-F_Silkscreen.gbr  GHOUL2.kicad_pcb  GHOUL2.kicad_prl  GHOUL2.kicad_pro  GHOUL2.kicad_sch  In_Balloon.kicad_pcb  In_Balloon.kicad_pro  In_Balloon.kicad_sch  README.md  sym-lib-table  ~GHOUL2.kicad_pcb.lck
Code/: CloudCruiser_NS131.ino  lol
Data/: freezertestns116.txt  freezertestns116_nogps.txt  gpstestingns116.txt  insulation_dryicens117.txt  ns112.TXT  ns112preflightTesting.TXT  ns114preflightTesting.txt  ns115.txt  ns115_ghoul_sheet.xlsx  ns116.txt  ns116testing.txt  xbeetestingns116.txt
GHOUL Paper Docs/: NS113 Choppy Data.csv  NS113 Choppy Data.xlsx  NS114 Choppy Data.xlsx  NS115 Choppy Data.csv  NS115 Choppy Data.xlsx  NS116 Choppy Data.csv  NS116 Choppy Data.xlsx  NS117 Choppy Data.csv  NS117 Choppy Data.xlsx  NS118 Choppy Data - Charlie.csv  NS118 Choppy Data - Snoopy.xlsx  NS120 Choppy Data.csv  NS120 Choppy Data.xlsx  NS121 Choppy Data - New Choppy.xlsx  NS121 Choppy Data.csv  NS122 Choppy Data (Montana).csv  SFU 1st launch with vent.xlsx  SFU 2nd vent launch.csv  SFU 2nd vent launch.xlsx
pid_sim/: ;  FIR_test.c  IIRFirstOrder.h  IIR_test.c  dft.py  file.csv  tags  (+5 more)
(+315 files in other folders)
